# praxis-titan-p6

./: .gitignore  ARCHITECTURE.md  GOVERNANCE.md  README.md  ROADMAP.md  cascade_matrix.txt  ccf_groups.txt  configcascade_example.json.txt  configccf_groups_example.json.txt  configfault_tree_example.json.txt  configrisk_priors_example.json.txt  configscenario_example.json.txt  convert_priors.py  engine.py  fault_tree_config.txt  praxis-core.cmd  praxis_core_run.py  praxis_memory.txt  pyproject.toml  risk_priors.txt  risk_priors_old.txt  srcpraxis_core__init__.py.txt  srcpraxis_corebayes.py.txt  srcpraxis_corecascade.py.txt  srcpraxis_corecli.py.txt  srcpraxis_corefault_tree.py.txt  srcpraxis_coreio.py.txt  srcpraxis_corenumeric.py.txt  srcpraxis_corepipeline.py.txt  srcpraxis_corepra.py.txt  srcpraxis_corereliability.py.txt  srcpraxis_corereporting.py.txt  twin_output.json
config/: CCF_groups.json  FINAL_cascade.json  FINAL_ccf.json  FINAL_fault_tree.json  FINAL_priors.json  FINAL_scenario.json  STRESS_OMEGA_cascade.json  STRESS_OMEGA_ccf.json  STRESS_OMEGA_fault_tree.json  STRESS_OMEGA_priors.json  STRESS_OMEGA_scenario.json  STRESS_apocalypse_cascade.json  STRESS_apocalypse_ccf.json  STRESS_apocalypse_fault_tree.json  STRESS_apocalypse_priors.json  STRESS_apocalypse_scenario.json  STRESS_ccf.json  (+18 more)
output/praxis_core_build/: pyproject.toml
output/praxis_core_build/praxis_core/: __init__.py  core_engine.py  pra_engine.py  reliability_from_numeric.py  risk_bayes.py  risk_numeric.py
output/praxis_core_build/praxis_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+306 files in other folders)
